[package]
name = "event_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
uuid = { version = "1.4.1", features = ["v4"]}
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
dotenv = "0.15.0"
